--- a/components/container.html
+++ b/components/container.html
@@ -4,7 +4,7 @@
             Portfolio
         </div>
         <div class="slide-item education">
-            Study
+            Education
         </div>
         <div class="slide-item info">
             Info
