--- a/components/info/info.html
+++ b/components/info/info.html
@@ -14,6 +14,21 @@
             Fashion / Climbing / Piano
         </p>
     </div>
-    
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Oracle</li>
+            <li>MySQL</li>
+            <li>MyBatis</li>
+            <li>JSP</li>
+            <li>JQuery</li>
+            <li>Spring</li>
+            <li>Github</li>
+        </ul>
+    </div>
 </div>
 <script src="./components/info/info.js"></script>
