--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+$base-color: #3498db;
+$base-color-hover: darken($base-color, 10%);
 
+// Define background colors
+$background: #fff;
+$background-alt: #f2f2f5;
+
+// Define border colors
+$border: #dcd9d9;
+
+// Define text colors
+$heading: #374054;
+$text: #74808a;
 ::-webkit-scrollbar-track
 {
  -webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0);
