--- a/components/portfolio/portfolio.html
+++ b/components/portfolio/portfolio.html
@@ -17,7 +17,7 @@
             <img src="../../images/arrow.svg" alt="">
         </div>
     </div>
-    <div class="item item-portfolio" id="music">
+    <div class="item item-portfolio" id="musiculture">
         <div class="title">
             MusiCulture<br/>
             버스킹 음악/자선기부활동
