--- a/components/detail/musiculture.html
+++ b/components/detail/musiculture.html
@@ -30,26 +30,26 @@
                 <div class="image-box">
                     <img src="./images/ps2.PNG" alt="">
                 </div>
-                <br/><br/>
-                프로젝트의 목적을 알리기 위해서 MAIN에서의 Header부분 이미지 슬라이더 공간을 두어 '기부대상'의  이미지를 첨부하였습니다.
+
+                프로젝트의 목적을 알리기 위해서 MAIN에서의 Header부분 이미지 슬라이더 공간을 둔 '기부대상'의  이미지 입니다.
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps3.PNG" alt="">
                 </div>
-                <br/><br/>
-                MAIN : 사이트 내 '좋아요 순' , '팔로잉 뮤지션(랜덤)', '공연/행사', '최신순' 정보들을 구성하는 페이지를 구현 하였습니다.<br>
+
+                MAIN : 사이트 내 '좋아요 순' , '팔로잉 뮤지션(랜덤)', '공연/행사', '최신순' 정보들을 구성하는 페이지 입니다.<br>
                 Thumbnail 컬럼을 생성하고 작성자가 올린 업로드 파일의 이미지 파일을 '미리보기' 할 수 있도록 하였습니다.
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps1.PNG" alt="">
                 </div>
-                <br/><br/>
+
                 관리자 측에서 일반 사용자(외주)가 보낸 공연섭외 문의를 받은 정보들을 '문의확인' 목록에 오래된 순으로 가져올 수 있는 페이지를 구현하고 '더보기'를 통해 다음 7개의 목록이 Ajax를 통해 생성되도록 하였습니다.
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps4.PNG" alt="">
                 </div>
-                <br/><br/>
+
                 공연섭외구매자가 공연에 대해 관리자에게 전송하는 FORM 으로서 업체(단체)에 대한 정보 입력 페이지 입니다.<br>
                 추가적으로 공연장소에 대한 정보를 알리기 위해서 Google 지도 API를 활용하였습니다.
                 <br><br>
