--- a/components/education/education.html
+++ b/components/education/education.html
@@ -12,6 +12,22 @@
             </p>
         </div>
     </div>
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Oracle</li>
+            <li>MySQL</li>
+            <li>MyBatis</li>
+            <li>JSP</li>
+            <li>JQuery</li>
+            <li>Spring</li>
+            <li>Github</li>
+        </ul>
+    </div>
 </div>
 
 <script src="./components/career/career.js"></script>
