--- a/components/education/education.html
+++ b/components/education/education.html
@@ -1,10 +1,12 @@
 <div class="section sec-career">
     <div class="item item-career" id="1">
         <div class="left-ele">
+          <a href="./components/education/certificate.pdf">
             <p class="title">
                 KH정보교육원<br/>
                 [NCS]웹개발 응용SW엔지니어
             </p>
+          </a>
         </div>
         <div class="right-ele">
             <p class="disc">
