--- a/components/info/info.html
+++ b/components/info/info.html
@@ -4,7 +4,7 @@
             E-mail :<br/> yuns0316@gmail.com<br/><br/>
             Phone :<br/> +82 10 2023 3808<br/><br/>
             Instagram :<br/> https://www.instagram.com/dbstjwls58<br/><br/>
-            Brunch :<br/> https://blog.naver.com/dbstjwls58
+            Blog :<br/> https://blog.naver.com/dbstjwls58
         </p>
     </div>
     <div class="item" id="2">
