--- a/components/detail/musiculture.html
+++ b/components/detail/musiculture.html
@@ -5,7 +5,7 @@
                     <img src="./images/arrow.svg" alt=""/>
                 </div>
                 <div class="title--bar">
-                    MusiCulture
+                    Final-Project
                 </div>
                 <div class="btn-empty">
 
@@ -41,10 +41,14 @@
                 Thumbnail 컬럼을 생성하고 작성자가 올린 업로드 파일의 이미지 파일을 '미리보기' 할 수 있도록 하였습니다.
                 <br><br>
                 <div class="image-box">
-                    <img src="./images/ps1.PNG" alt="">
+                    <img src="./images/ps6.PNG" alt="">
+                </div>
+                <div class="image-box">
+                    <img src="./images/ps7.PNG" alt="">
                 </div>
 
                 관리자 측에서 일반 사용자(외주)가 보낸 공연섭외 문의를 받은 정보들을 '문의확인' 목록에 오래된 순으로 가져올 수 있는 페이지를 구현하고 '더보기'를 통해 다음 7개의 목록이 Ajax를 통해 생성되도록 하였습니다.
+                관리자가 하나의 목록을 선택하였을 때, JQuery Accordion을 이용하여 SlideDown 되며 디테일한 정보를 보여줍니다. 이후 승인버튼을 눌러 공연 확정되도록 구현 하였습니다. 
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps4.PNG" alt="">
@@ -52,6 +56,13 @@
 
                 공연섭외구매자가 공연에 대해 관리자에게 전송하는 FORM 으로서 업체(단체)에 대한 정보 입력 페이지 입니다.<br>
                 추가적으로 공연장소에 대한 정보를 알리기 위해서 Google 지도 API를 활용하였습니다.
+                <br><br>
+                <div class="image-box">
+                    <img src="./images/ps5.PNG" alt="">
+                </div>
+
+                회원가입시, 일반 회원 / 뮤지션 회원 사용자 선택으로 인해서 두가지로 나뉘게 됩니다. 뮤지션 회원들이 자신의 공연 영상을 올리면<br>
+                회원 구분없이 영상게시글 작성자(뮤지션)에 대한 팔로우/팔로우 취소를 할 수 있도록 하고 뮤지션 회원은 MyPage에서 자신의 팔로워 수를 볼 수 있도록 하였습니다.
                 <br><br>
             </div>
 
