--- a/style/main.css
+++ b/style/main.css
@@ -94,30 +94,6 @@ html, body, div, ul, li, p, span, a {
     opacity: 1;
   }
 }
-#skills {
-  padding: 50px 15px;
-  text-align: center;
-}
-#skills h2 {
-  color: #374054;
-  margin-bottom: 50px;
-}
-#skills ul {
-  display: block;
-  margin: 0 auto;
-  padding: 0;
-  max-width: 800px;
-}
-#skills li {
-  display: inline-block;
-  margin: 7px;
-  padding: 5px 10px;
-  color: #374054;
-  background: #e4e4ea;
-  list-style: none;
-  cursor: default;
-  font-size: 1.2em;
-}
 
 .container {
   width: 100%;
@@ -129,7 +105,7 @@ html, body, div, ul, li, p, span, a {
   padding: 0px 10px;
   background-color: #fff;
   transition: all 0.3s;
-  animation: sliderFadeIn 1 0.3s;
+  animation: sliderFadeIn 1 2s;
 }
 .container .slider.active {
   padding: 10px 10px 0px;
@@ -172,6 +148,38 @@ html, body, div, ul, li, p, span, a {
     transform: translateX(0px);
   }
 }
+#skills {
+  padding: 50px 15px;
+  text-align: center;
+  opacity: 0;
+  transition: all 0.3s;
+  transform: translateX(-50px);
+}
+#skills.active{
+  opacity: 1;
+  transform: translateX(0);
+}
+#skills h2 {
+  color: #374054;
+  margin-bottom: 50px;
+}
+#skills ul {
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 800px;
+}
+#skills li {
+  display: inline-block;
+  margin: 7px;
+  padding: 5px 10px;
+  color: #374054;
+  background: #e4e4ea;
+  list-style: none;
+  cursor: default;
+  font-size: 1.2em;
+}
+
 #section {
   padding: 10px 0px;
 }
