--- a/components/education/education.html
+++ b/components/education/education.html
@@ -12,7 +12,7 @@
             </p>
         </div>
     </div>
-    <div id="skills">
+    <div class="skills">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>Java</li>
