--- a/components/detail/musiculture.html
+++ b/components/detail/musiculture.html
@@ -22,7 +22,7 @@
               <div class="image-box">
                   <img src="./images/main.jpg" alt="">
               </div>
-                MusiCulture는 버스킹 음악사이트와 기부마켓플랫폼에서 모티브를 얻어 두가지 컨셉을 결합하여 사용자(소비자)들이 착한 소비, 윤리 소비를 할 수 있도록 만든 웹사이트 입니다.
+                MusiCulture는 버스킹 음악사이트와 기부마켓플랫폼에서 모티브를 얻어 두가지 컨셉을 결합하여 사용자(소비자)들이 음악을 통해서 착한 소비, 윤리 소비를 할 수 있도록 만든 웹사이트 입니다.
                 <br/>
                 버스킹 뮤지션들이 자신들의 공연 영상 및 일정과 함께 셀프마케팅을 할 수 있고 관리자 측에서는 외부 기업 및 단체에서 공연 섭외 문의를 받아 각각 뮤지션으로 구성된 하나의 공연행사를 구성하며 티켓판매 수익의 50%를 사회공헌활동으로 전개하는 목적을 가지고 있습니다. <br><br>
                  <br>
