--- a/components/detail/travel.html
+++ b/components/detail/travel.html
@@ -15,48 +15,53 @@
         <div class="content">
             <div class="title">
                 TravelMaker<br/>
+                여행에 미치다
             </div>
             <div class="disc">
               <div class="image-box">
-                  <img src="./images/main.jpg" alt="">
+                  <img src="./images/그림1.png" alt="">
               </div>
-                MusiCulture는 버스킹 음악사이트와 기부마켓플랫폼에서 모티브를 얻어 두가지 컨셉을 결합하여 사용자(소비자)들이 착한 소비, 윤리 소비를 할 수 있도록 만든 웹사이트 입니다.
-                <br/>
-                버스킹 뮤지션들이 자신들의 공연 영상 및 일정과 함께 셀프마케팅을 할 수 있고 관리자 측에서는 외부 기업 및 단체에서 공연 섭외 문의를 받아 각각 뮤지션으로 구성된 하나의 공연행사를 구성하며 티켓판매 수익의 50%를 사회공헌활동으로 전개하는 목적을 가지고 있습니다. <br><br>
+              Work-Life-Balance(일과 휴식) 용어가 자주 언급되면서 여행을 포함한 다양한 활동을 즐기는 젊은층들이 늘어나고 있습니다.
+              저희는 여행에 초점을 맞추어 사용자 간 원하는 정보들을 공유하고 소통할 수 있는 커뮤니티 공간을 제작였습니다.
+              <br/>
+
+              <br><br>
                  <br>
                 <br/><br/>
                 <div class="image-box">
-                    <img src="./images/ps2.PNG" alt="">
+                    <img src="./images/그림2.png" alt="">
                 </div>
-
-                프로젝트의 목적을 알리기 위해서 MAIN에서의 Header부분 이미지 슬라이더 공간을 둔 '기부대상'의  이미지 입니다.
+                <div class="image-box">
+                    <img src="./images/그림3.jpg" alt="">
+                </div>
+                화면 설계를 위해 타 사이트 Instagram과 naver카페를 벤치마킹 하였습니다.
                 <br><br>
                 <div class="image-box">
-                    <img src="./images/ps3.PNG" alt="">
+                    <img src="./images/그림6.png" alt="">
                 </div>
-
-                MAIN : 사이트 내 '좋아요 순' , '팔로잉 뮤지션(랜덤)', '공연/행사', '최신순' 정보들을 구성하는 페이지 입니다.<br>
-                Thumbnail 컬럼을 생성하고 작성자가 올린 업로드 파일의 이미지 파일을 '미리보기' 할 수 있도록 하였습니다.
+                <ul><li>회원가입</li></ul>
+                Ajax를 이용한 아이디 중복확인 기능, 자바스크립트를 이용한 Password 일치 기능, Daum 주소 API를 활용한 저장기능을 구현하였습니다.
                 <br><br>
                 <div class="image-box">
-                    <img src="./images/ps1.PNG" alt="">
+                    <img src="./images/그림7.png" alt="">
                 </div>
-
-                관리자 측에서 일반 사용자(외주)가 보낸 공연섭외 문의를 받은 정보들을 '문의확인' 목록에 오래된 순으로 가져올 수 있는 페이지를 구현하고 '더보기'를 통해 다음 7개의 목록이 Ajax를 통해 생성되도록 하였습니다.
+                <ul><li>로그인</li></ul>
+                회원가입을 하지 않고도 빠르고 쉽게 로그인을 할 수 있도록 구글, 페이스북을 연동한 로그인 기능을 구현하였습니다.
                 <br><br>
                 <div class="image-box">
-                    <img src="./images/ps4.PNG" alt="">
+                    <img src="./images/그림4.png" alt="">
                 </div>
-
-                공연섭외구매자가 공연에 대해 관리자에게 전송하는 FORM 으로서 업체(단체)에 대한 정보 입력 페이지 입니다.<br>
-                추가적으로 공연장소에 대한 정보를 알리기 위해서 Google 지도 API를 활용하였습니다.
+                <ul><li>게시판</li></ul>
+                Instagram의 뉴스피드와 유사한 UI를 보이며 게시글을 작성할 수 있고 다른 사용자가 업로드 한 게시글을 볼 수 있도록 하였습니다.
+                인기게시물 Best3을 동시에 볼 수 있고 상단부분에 게시글 검색기능을 구현 하였습니다.
                 <br><br>
                 <div class="image-box">
-                    <img src="./images/ps5.PNG" alt="">
+                    <img src="./images/그림5.png" alt="">
                 </div>
-
-                회원가입시, 일반 회원 / 뮤지션 회원 사용자 선택으로 인해서 두가지로 나뉘게 됩니다. 뮤지션 회원들이 자신의 공연 영상을 올리면<br>
-                회원 구분없이 영상게시글 작성자(뮤지션)에 대한 팔로우/팔로우 취소를 할 수 있도록 하고 뮤지션 회원은 MyPage에서 자신의 팔로워 수를 볼 수 있도록 하였습니다.
+                <ul><li>상세보기</li></ul>
+                게시글을 선택하여 디테일 정보를 볼 수 있는 페이지로 게시글 작성자가 아닐시에는 보기만 가능하고 작성자일 경우 수정, 삭제기능이 있습니다.<br>
+                게시글마다 Ajax를 통한 '댓글'과 '좋아요' 기능을 가지고 있으며 각 Session ID마다 게시글에 대한 좋아요 Check상태를 확인하고 좋아요/취소 기능이 작동합니다.<br>
+                댓글란 하단부분에는 Sequence를 가져와 이전글 다음글 보기(페이지 이동)가 가능하도록 하였습니다.
                 <br><br>
             </div>
 
