--- a/components/detail/travel.html
+++ b/components/detail/travel.html
@@ -29,8 +29,8 @@
                  <br>
                 <br/><br/>
                 <div class="image-box">
-                    <img style="width:250px;" src="./images/그림2.png" alt="">
-                    <img style="width:250px;" src="./images/그림3.jpg" alt="">
+                    <img style="width:300px; height:250px;" src="./images/그림2.png" alt="">
+                    <img style="width:300px;" src="./images/그림3.jpg" alt="">
                 </div>
                 화면 설계를 위해 타 사이트 Instagram과 naver카페를 벤치마킹 하였습니다.
                 <br><br>
