--- a/components/detail/travel.html
+++ b/components/detail/travel.html
@@ -21,7 +21,7 @@
               <div class="image-box">
                   <img src="./images/그림1.png" alt="">
               </div>
-              Work-Life-Balance(일과 휴식) 용어가 자주 언급되면서 여행을 포함한 다양한 활동을 즐기는 젊은층들이 늘어나고 있습니다.
+              Work-Life-Balance(워라밸)용어가 자주 언급되면서 여행을 포함한 다양한 활동을 즐기는 젊은층들이 늘어나고 있습니다.
               저희는 여행에 초점을 맞추어 사용자 간 원하는 정보들을 공유하고 소통할 수 있는 커뮤니티 공간을 제작였습니다.
               <br/>
 
