--- a/components/detail/musiculture.html
+++ b/components/detail/musiculture.html
@@ -31,14 +31,17 @@
                     <img src="./images/ps2.PNG" alt="">
                 </div>
 
-                프로젝트의 목적을 알리기 위해서 MAIN에서의 Header부분 이미지 슬라이더 공간을 둔 '기부대상'의  이미지 입니다.
+                프로젝트 목적을 알리기 위한 Main에서의 Header부분 이미지 슬라이더 공간속에 ‘기부대상’에 대한 이미지를 넣었습니다.
+                매뉴 탭 밑으로는 로그인/비로그인 또는 로그인 사용자 디테일 정보에 따라 동영상 맞춤 데이터를 불러오는 레이아웃을 배치하였습니다.
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps3.PNG" alt="">
                 </div>
 
-                MAIN : 사이트 내 '좋아요 순' , '팔로잉 뮤지션(랜덤)', '공연/행사', '최신순' 정보들을 구성하는 페이지 입니다.<br>
-                Thumbnail 컬럼을 생성하고 작성자가 올린 업로드 파일의 이미지 파일을 '미리보기' 할 수 있도록 하였습니다.
+                메인페이지에서의 주된 기능으로는 각 카테고리를 구분지어
+                데이터를 불러와 한눈에 볼 수 있도록 하였습니다. [좋아요순], [최신확정된 공연순], [최신업로드뮤지션순] 3개의 카테고리들은 로그인/비로그인의 공통적으로 볼수있는 요소이고 부분적인 맞춤 기능으로 로그인 한 사용자에 따라 ‘팔로우 뮤지션’의 동영상이 Sql Query문을 통해 랜덤으로 불러와지게 됩니다.
+                각각의 영상데이터들은 작성자가 올린 동영상 재생중 일부분을 캡처하여 만든 썸네일 기능을 통해 ‘미리보기’ 할 수 있도록 하였습니다.
+
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps6.PNG" alt="">
@@ -47,22 +50,25 @@
                     <img src="./images/ps7.PNG" alt="">
                 </div>
 
-                관리자 측에서 일반 사용자(외주)가 보낸 공연섭외 문의를 받은 정보들을 '문의확인' 목록에 오래된 순으로 가져올 수 있는 페이지를 구현하고 '더보기'를 통해 다음 7개의 목록이 Ajax를 통해 생성되도록 하였습니다.
-                관리자가 하나의 목록을 선택하였을 때, JQuery Accordion을 이용하여 SlideDown 되며 디테일한 정보를 보여줍니다. 이후 승인버튼을 눌러 공연 확정되도록 구현 하였습니다. 
+                관리자 측에서 일반 사용자(외주)가 보낸 공연섭외 문의를 받은 정보들을 '문의확인' 목록에 오래된 순으로 가져올 수 있는 페이지 입니다.<br>
+                페이징 로드시점부터 7개의 목록을 생성하고 더보기 버튼을 누를시 다음 7개의 목록이 Ajax를 통해 생성되도록 하였습니다.
+                JQuery Accordion을 이용하여 관리자가 하나의 목록을 선택하였을 때 SlideDown되며 디테일한 정보를 보여줍니다. 이후 관리자가 승인버튼을 눌러 공연이 확정되는 구성으로 테이블의 Approval 컬럼을 업데이트하여 줍니다.
+
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps4.PNG" alt="">
                 </div>
 
                 공연섭외구매자가 공연에 대해 관리자에게 전송하는 FORM 으로서 업체(단체)에 대한 정보 입력 페이지 입니다.<br>
-                추가적으로 공연장소에 대한 정보를 알리기 위해서 Google 지도 API를 활용하였습니다.
+                Google 지도API를 활용하여 공연의 위치를 좌표 값으로 저장하고 뮤지션모집 게시판에서 불러올 때 저장했던 공연위치를 불러오도록 하였습니다.
+                사용자가 Form을 전체작성 후 제출할 때 null값이 들어가거나 기타 데이터형식이 맞지 않을 때 return되도록 하였습니다.
+
                 <br><br>
                 <div class="image-box">
                     <img src="./images/ps5.PNG" alt="">
                 </div>
-
-                회원가입시, 일반 회원 / 뮤지션 회원 사용자 선택으로 인해서 두가지로 나뉘게 됩니다. 뮤지션 회원들이 자신의 공연 영상을 올리면<br>
-                회원 구분없이 영상게시글 작성자(뮤지션)에 대한 팔로우/팔로우 취소를 할 수 있도록 하고 뮤지션 회원은 MyPage에서 자신의 팔로워 수를 볼 수 있도록 하였습니다.
+                영상게시글 상세보기 페이지입니다.<br>
+                사용자들이 영상게시글에 작성자에 대한 팔로우를 할 수 있는 기능으로서 Ajax를 활용하여 뮤지션ID와 로그인사용자ID의 값을 보내고 Follow테이블에 sequence를 포함한 하나의 row를 생성하게 되고 다시 한번 누를 시 sequence를 조회하여 sequence가 존재할 때 delete하고 팔로우 취소가 되도록 하였습니다.
                 <br><br>
             </div>
 
